Schedule full integration
