# src/modules/shop/shop.schema.ts
@@ -2,7 +2,7 @@ import { createInsertSchema } from 'drizzle-zod';
 import { addressSchema } from '../address/address.schema';
 import { userSchema } from './../user/user.schema';
 import { z } from 'zod';
-import { shop } from '../../../database/schema';
+import { type ShopSchedule, shop } from '../../../database/schema';
 
 // export const shopSchema = z.object({
 //   tables: z.number().positive().optional(),
@@ -67,6 +67,12 @@ export const shopGetOrderSchema = z.object({
   }),
 });
 
+export const shopGetScheduleSchema = z.object({
+  params: z.object({
+    id: z.string(),
+  }),
+});
+
 export const shopUpdateSchema = z.object({
   body: createInsertSchema(shop).omit({
     addressId: true,
@@ -108,12 +114,17 @@ export type ShopListResType = {
   phone_number: number;
   category_name: string;
   category_id: number;
+  photo_url?: string;
+  schedule: ShopSchedule[];
 };
 export type ShopCreateType = z.infer<typeof shopCreateSchema>['body'];
 export type ShopGetType = z.infer<typeof shopGetSchema>['params'];
 export type ShopGetMenuType = z.infer<typeof shopGetMenuSchema>['params'];
 export type ShopGetQrCodeType = z.infer<typeof shopGetQrCodeSchema>['params'];
 export type ShopGetOrderType = z.infer<typeof shopGetOrderSchema>['params'];
+export type ShopGetScheduleType = z.infer<
+  typeof shopGetScheduleSchema
+>['params'];
 export type ShopGetItemCategoryType = z.infer<
   typeof shopGetItemCategorySchema
 >['params'];
